# PiercingXX-Mobile-Shell

./: .gitignore  README.md  design.md  notes.md  todo.md
devices/fairphone-5/: flash.sh  notes.md
devices/furiphone-flx1/: notes.md
devices/librem-5/: notes.md
launcher/: README.md  meson.build
launcher/data/: io.piercingxx.PiercingShell.desktop.in  phoc.ini  piercing-session.in  piercing-shell.in  piercingos.session.in
launcher/data/systemd/: piercing-shell.service
launcher/src/: als_brightness.py  app_index.py  app_switcher.py  back_gesture.py  call_ui.py  config.py  contacts.py  dialer.py  display_manager.py  first_boot.py  gesture_config.py  home_launcher.py  ipc.py  lock_screen.py  main.py  modem_monitor.py  notif_daemon.py  notification_shade.py  power_menu.py  quick_actions.py  shell_log.py  sms.py  style.css  system_status.py  update_checker.py  window.py
pixel-3a/: research.md
pixel-3a/shell/: README.md  meson.build
pixel-3a/shell/data/: io.piercingxx.PiercingShell.desktop.in
pixel-3a/shell/src/: app_index.py  config.py  main.py  style.css  window.py
scripts/: bootstrap-dots.sh
scripts/reference/linux-phone-mod/: README.md  apps.sh
